# interpreter-server

./: .gitignore  Main.hs  Makefile  README.md  app.cabal  stack.yaml
Client/: CSS.hs
Controllers/: Home.hs
Static/: index.html
Views/: Home.hs
