name:                app
version:             0.1.0.0
synopsis:            Server for lambda-interpreter project
description:         Server for lambda-interpreter project
homepage:            https://github.com/rsschoolfp/interpreter-server
license:             AllRightsReserved
author:              xeontem
maintainer:          xeontem@gmail.com
copyright:           xeontem (c) 1988-2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Client.CSS
                       Controllers.Home
                       Views.Home
                       Views.Utils
  build-depends:       base >=4.3.1,
                       wai-extra >=3.0.0,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson
  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/rsschoolfp/interpreter-server
